[package]
name = "comment_units"
version = "0.1.0"
authors = ["Willi Kappler <grandor@gmx.de>"]
license = "MIT"
description = "check physical units in source comments"
readme = "README.md"
repository = "https://github.com/willi-kappler/comment_units"
keywords = ["physics", "units", "science"]
categories = ["science"]
documentation = "https://docs.rs/comment_units/0.1.0/comment_units/"

[dependencies]
clap = "2.24"
walkdir = "1"

[dependencies.nom]
version = "3.0"
features = ["verbose-errors"]
